# omni-dreams

./: .gitattributes  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  REUSE.toml  THIRD_PARTY_NOTICES.txt
post-training/: .gitignore  COMMIT.txt  README.md  REUSE.toml  THIRD_PARTY_NOTICES.md  pyproject.toml
post-training/docker/: nightly-requirements.txt
post-training/docs/: setup.md
post-training/omnidreams/: __about__.py  __init__.py  checkpoints_omnidreams.py
post-training/omnidreams/_src/imaginaire/: config.py  flags.py  model.py  serialization.py  trainer.py
post-training/omnidreams/_src/imaginaire/attention/: README.md  __init__.py  backends.py  checks.py  frontend.py  masks.py  varlen.py
post-training/omnidreams/_src/imaginaire/callbacks/: every_n.py  image_grad_clip.py  manual_gc.py
post-training/omnidreams/_src/imaginaire/checkpointer/: base.py  ddp.py  ddp_test.py  dummy.py  s3_filesystem.py  safe_broadcast.py  tp.py  tp_ema.py
post-training/omnidreams/_src/imaginaire/configs/: lr_scheduler.py
post-training/omnidreams/_src/imaginaire/datasets/: joint_training.py  mock_dataset.py  mock_dataset_test.py
post-training/omnidreams/_src/imaginaire/functional/: batch_ops.py  lr_scheduler.py  multi_step.py  runge_kutta.py
post-training/omnidreams/_src/imaginaire/lazy_config/: __init__.py  file_io.py  instantiate.py  lazy.py  lazy_call.py  omegaconf_patch.py  registry.py  registry_test.py
post-training/omnidreams/_src/imaginaire/models/: abstract_emb_model.py
post-training/omnidreams/_src/imaginaire/modules/: camera.py  camera_test.py  denoiser_scaling.py  edm_sde.py  image_embeddings.py  res_sampler.py
post-training/omnidreams/_src/imaginaire/utils/: callback.py  checkpoint_db.py  checkpoint_db_test.py  checkpointer.py  cluster_env.py  config_helper.py  context_managers.py  context_parallel.py  count_params.py  dataloader.py  dataset_utils.py  denoise_prediction.py  device.py  disabled_train.py  distributed.py  ema.py  ema_test.py  embedding_concat_strategy.py  fsdp_helper.py  fused_adam.py  fused_nan_to_num.py  graph.py  helper_test.py  high_sigma_strategy.py  launch.py  log.py  misc.py  misc_test.py  object_store.py  optim_instantiate.py  parallel_state_helper.py  primitives.py  profiling.py  progress_bar.py  registry.py  replace_bg_color.py  s3_utils.py  scheduler.py  submit_job_helper.py  timer.py  (+6 more)
post-training/omnidreams/_src/imaginaire/visualize/: __init__.py  img.py  video.py
post-training/omnidreams/_src/omnidreams/callbacks/: model_param_stats.py  val_loss_computation.py  wandb_log_dmd.py
post-training/omnidreams/_src/omnidreams/checkpointer/: dcp.py  dcp_distill.py
post-training/omnidreams/_src/omnidreams/datasets/: local_multiview.py  multiview.py  selective_tar_reader.py  sil_dataset.py  wdinfo_utils.py
post-training/omnidreams/_src/omnidreams/inference/: inference_i2v.py  inference_mv.py
post-training/omnidreams/_src/omnidreams/models/: joint_causal_cosmos_model.py  joint_causal_cosmos_model_hdmap.py  joint_causal_cosmos_mv_hdmap_model.py  joint_causal_cosmos_mv_model.py
post-training/omnidreams/_src/omnidreams/modules/: flex_attention.py
post-training/omnidreams/_src/omnidreams/networks/: bidirectional_crossview_cosmos.py  causal_cosmos.py  causal_cosmos_hdmap.py  causal_crossview_cosmos.py  causal_crossview_hdmap_cosmos.py  minimal_v1_lvg_dit.py  minimal_v1_lvg_dit_hdmap.py
post-training/omnidreams/_src/omnidreams/self_forcing/: dmd.py  self_forcing_dmd.py  self_forcing_dmd_hdmap.py  self_forcing_dmd_mv.py  self_forcing_dmd_mv_hdmap.py  utils.py
post-training/omnidreams/_src/omnidreams/trainer/: trainer_distillation.py
post-training/omnidreams/_src/omnidreams/utils/: context_parallel.py  misc.py  model_loader.py  torch_future.py
post-training/omnidreams/_src/predict2/: conditioner.py
post-training/omnidreams/_src/predict2/callbacks/: compile_tokenizer.py  dataloading_monitor.py  device_monitor.py  every_n_draw_sample.py  grad_clip.py  heart_beat.py  iter_speed.py  val_loss_computation.py  validation_draw_sample.py  wandb_log.py
post-training/omnidreams/_src/predict2_multiview/: conditioner.py
post-training/omnidreams/experiments/causal/: release.py
post-training/omnidreams/experiments/causal_multiview/: release.py
post-training/omnidreams/experiments/self_forcing/: release.py
samples/interactive-drive/: .gitignore  .pre-commit-config.yaml  NOTICE  README.md  prepare.py  pyproject.toml
samples/interactive-drive/assets/: README.md
samples/interactive-drive/configs/: example_world_model.yaml
samples/interactive-drive/configs/wheels/: thrustmaster.yaml
samples/interactive-drive/scripts/: check.sh
samples/interactive-drive/src/interactive_drive/: __init__.py  __main__.py  app.py  camera.py  cli.py  colors.py  config.py  control.py  controls.py  demo.py  hf_org.py  loading_overlay.py  math3d.py  math_utils.py  patterns.py  physics.py  ply_io.py  presenter.py  rasterizer.py  scene_fixture.py  scene_loader.py  slangpy_hud_presenter.py  streaming_presenter.py  synthetic_scene.py  trajectory.py  types.py
samples/interactive-drive/tests/: conftest.py  pipeline_fakes.py  test_app_smoke.py  test_camera.py  test_chunk_pipeline.py  test_cli.py  test_controls.py  test_core_control.py  test_hf_org.py  test_keyboard_state.py  test_latency_loop.py  test_latency_simulation.py  test_latency_timing.py  test_manifest.py  test_physics.py  test_raster_reference_image.py  test_scene_fixture.py  test_scene_helpers.py  test_scene_loader.py  test_synthetic_scene.py  test_world_model_adapter.py
samples/post-training/: .gitignore  AGENTS.md  QUICKSTART.md  README.md  SKILL.md  _env.sh  conftest.py  prepare.py  pyproject.toml  setup_env.sh  smoke_test.slurm  torchrun_smoke.sh  triton_per_rank_wrap.sh
samples/post-training/configs/: config.py  exp_pai_nurec_sv_hdmap.py
samples/post-training/tests/: test_checkpoint_setup_consistency.py  test_cuda_stack.py  test_imports_clean.py  test_prepare.py  test_setup_env.py  test_smoke_test_slurm.py  test_torchrun_smoke.py  test_triton_per_rank_wrap.py
(+401 files in other folders)
