# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omni-dreams-post-training"
dynamic = ["version"]
authors = [
  {name = "NVIDIA Corporation"},
]
description = "Omniverse Dreams Post-Training Package"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "cosmos-oss==0.1.0",
]

[project.optional-dependencies]
cu128 = ["cosmos-oss[cu128_torch27]"]
cu130 = ["cosmos-oss[cu130_torch29]"]

[dependency-groups]
dev = ["cosmos-oss[dev]"]

[project.readme]
content-type = "text/markdown"
text = '''
# Omni-Dreams Post-Training

[Documentation](https://github.com/nv-tlabs/omni-dreams/blob/main/README.md)
'''

[project.urls]
repository = "https://github.com/nv-tlabs/omni-dreams"

[tool.uv]
managed = true
conflicts = [
  [{extra = "cu128"}, {extra = "cu130"}],
]
override-dependencies = [
  "numpy>=2.0.0",
  # Keep transitive HTTP clients off urllib3 versions with sensitive-header
  # redirect handling and decompression/data-amplification vulnerabilities.
  "urllib3>=2.7.0",
  # Keep protobuf off the 6.33.x line flagged by BDSA for the ParseDict
  # recursion-depth follow-up.
  "protobuf>=7.35.0,<8",
]
constraint-dependencies = [
  # Avoid the PyPI torch 2.10.0 fallback selected for Python 3.10 no-extra
  # universal-lock splits; CUDA extras remain pinned to their container stacks.
  "torch!=2.10.0",
]

[tool.uv.workspace]
members = ["packages/*", "../samples/post-training"]

[tool.uv.sources]
cosmos-oss = [{ workspace = true }]

[tool.hatch.version]
path = "omnidreams/__about__.py"

[tool.hatch.build.targets.sdist]
packages = [
  "omnidreams",
]

[tool.hatch.build.targets.wheel]
packages = [
  "omnidreams",
]
exclude = [
  "*_test.py",
]
