# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interactive-drive"
version = "0.1.0"
description = "Single-process driving demo with a Ludus OpenGL raster backend and a PyTorch world-model backend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "pyarrow>=16.0",
]

[project.optional-dependencies]
ui = [
  "slangpy==0.41.0",
  "torch>=2.11",
  "ludus-renderer @ git+ssh://git@github.com/NVIDIA/flashdreams.git@7fd5f4719011644006547d928ec3822beec42f72#subdirectory=integrations/alpadreams/ludus-renderer",
]
world-model = [
  "flashdreams @ git+ssh://git@github.com/NVIDIA/flashdreams.git@17b95539580a0a1945eb73f9f9c316b235defe3f#subdirectory=flashdreams",
  "flash-omnidreams @ git+ssh://git@github.com/NVIDIA/flashdreams.git@17b95539580a0a1945eb73f9f9c316b235defe3f#subdirectory=integrations/omnidreams",
  "torch>=2.11",
  "torchvision>=0.26",
  "einops>=0.8",
  "safetensors>=0.5",
  "tqdm>=4.67",
  "transformers>=5.0,<6",
  "huggingface_hub>=0.24",
  "protobuf>=7.35.0,<8",
  "urllib3>=2.7.0",
]
dev = [
  "pytest>=9.0.3",
  "ruff",
  "pyright",
  "pre-commit>=3.7",
  "pyvirtualdisplay>=3.0",
  "flip-evaluator>=1.7",
]

[project.scripts]
# Single entry point. The HUD is on by default; pass ``--no-hud`` to
# get the legacy bare-backend behaviour (matching the older standalone
# ``interactive-drive`` script). ``--stream-mjpeg HOST:PORT`` implies
# ``--no-hud`` because the user is then viewing through a browser.
interactive-drive = "interactive_drive.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["src/interactive_drive"]

[tool.hatch.build.targets.sdist]
include = [
  "src/interactive_drive",
  "configs",
  "tests",
  "README.md",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
strict_markers = true
addopts = "-m 'not xvfb' --capture=sys"
markers = [
  "gpu: test requires an NVIDIA GPU / CUDA driver (select with '-m gpu', skip with '-m \"not gpu\"')",
  "xvfb: test uses pyvirtualdisplay/Xvfb (deselected by default; run with '-m xvfb' or clear with '-m \"\"')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# CPY001 (missing-copyright-notice) is a ruff preview rule. `preview = true` plus
# `explicit-preview-rules = true` opts in to that one rule without enabling other
# in-preview behaviour for the stable rules.
preview = true
explicit-preview-rules = true
select = ["E", "F", "W", "I", "B", "UP", "SIM", "CPY001"]
ignore = [
  # TODO: 18 long lines remain across argparse descriptions, error f-strings, and a
  # few long signatures. Each wants a small local restructure; re-enable once cleaned up.
  "E501",
]

# Enforce the NVIDIA SPDX copyright header on every .py file. The year must end in
# 2026; an optional earlier year may precede it (e.g. "2024-2026"). Bump the regex
# year annually when the calendar year ticks over.
[tool.ruff.lint.flake8-copyright]
notice-rgx = 'SPDX-FileCopyrightText: Copyright \(c\) (\d{4}-)?2026 NVIDIA CORPORATION & AFFILIATES\.'

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests"]
# TODO: files listed below currently fail pyright in `standard` mode because of
# structural patterns we haven't untangled yet:
#   - slangpy objects held as `: object` (math_utils.py) - need real slangpy type
#     imports without breaking the optional ui-extra install.
#   - flashdreams imports currently lack type information in this repo.
# Remove entries as each file is cleaned up.
exclude = [
  "src/interactive_drive/math_utils.py",
  "src/interactive_drive/scene_loader.py",
  "src/interactive_drive/backends/world_model.py",
  "src/interactive_drive/world_model/flashdreams_adapter.py",
  "src/interactive_drive/world_model/manifest.py",
  "tests/test_world_model_adapter.py",
]

[tool.uv]
managed = true
override-dependencies = [
  "nvidia-cublas>=13.4",
  # Keep transitive HTTP clients off urllib3 versions with sensitive-header
  # redirect handling and decompression/data-amplification vulnerabilities.
  "urllib3>=2.7.0",
  # Keep protobuf off the 6.33.x line flagged by BDSA for the ParseDict
  # recursion-depth follow-up.
  "protobuf>=7.35.0,<8",
]
# Flashdreams' omnidreams integration is a workspace member in that repo and
# carries workspace source hints for these packages. This project owns the pins
# above directly, so ignore the nested hints during uv resolution.
no-sources-package = ["flashdreams", "ludus-renderer"]
# transformer-engine-torch must build against the resolved CUDA-enabled torch
# instead of uv's isolated build env, where torch.version.cuda can be None.
no-build-isolation-package = ["transformer-engine-torch"]
